[gd_scene load_steps=7 format=2]

[ext_resource path="res://Weapon/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Weapon/HitBox.gd" type="Script" id=2]
[ext_resource path="res://Weapon/Fx.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "Axe",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "Hammer",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "Lance",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "Sword",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 8 )

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Weapon" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "Lance"
offset = Vector2( 0, 12 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 34
script = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 15 )
shape = SubResource( 2 )

[node name="ImpactFx" type="CPUParticles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 0, 16 )
emitting = false
amount = 1
lifetime = 0.1
one_shot = true
explosiveness = 1.0
texture = ExtResource( 7 )
gravity = Vector2( 0, 0 )
anim_speed = 1.0

[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered"]
[connection signal="body_entered" from="HitBox" to="HitBox" method="_on_body_entered"]
[connection signal="hit_something" from="HitBox" to="." method="_on_hit_something"]
